# Text-editor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh
core/: vi.cpp
core/editor/: editor.cpp  editor.h  editor.hpp  print.cpp  run.cpp
core/parser/: parser.cpp  parser.h  parsercommandinfo.cpp  parsercommandinfo.h  parserparameter.cpp  parserparameter.h
core/text/: add.cpp  del.cpp  insert.cpp  print.cpp  registerchange.cpp  remove.cpp  replace.cpp  text.cpp  text.h  text.hpp
core/util/: util.cpp  util.h  util.hpp
include/: editor.hpp  text.hpp
src/: editor.cpp  text.cpp  vi.cpp
